--- a/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
+++ b/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1756540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec 26 01:15:46 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec 26 11:13:21 2022</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>183c791981914170bec9cf39805b6792</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>e92ec3c51a2459daaece9299c661f58d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>e92ec3c51a2459daaece9299c661f58d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>5</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2592 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 9 5900HS with Radeon Graphics        </TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3294 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -37,11 +37,11 @@
    <TD>launchprogramfpga=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=2</TD>
    <TD>openhardwaremanager=10</TD>
-   <TD>openproject=8</TD>
+   <TD>openproject=9</TD>
    <TD>openrecenttarget=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>programdevice=2</TD>
    <TD>projectsettingscmdhandler=1</TD>
-   <TD>runbitgen=7</TD>
+   <TD>runbitgen=8</TD>
    <TD>runsynthesis=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>savefileproxyhandler=2</TD>
    <TD>settopnode=1</TD>
@@ -51,7 +51,7 @@
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=15</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=16</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -254,7 +254,7 @@
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=csg324</TD>
-    <TD>pct_clock_constrained=2.000000</TD>
+    <TD>pct_clock_constrained=1.000000</TD>
     <TD>pct_inputs_defined=16</TD>
     <TD>platform=nt64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
@@ -656,10 +656,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:40s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:21s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=507.809MB</TD>
-    <TD>memory_peak=737.867MB</TD>
+    <TD>memory_gain=498.711MB</TD>
+    <TD>memory_peak=708.324MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
