--- a/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
+++ b/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1756540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec 26 11:13:21 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun Jan 08 12:01:12 2023</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>183c791981914170bec9cf39805b6792</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>5</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>9</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -32,16 +32,16 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=6</TD>
-   <TD>autoconnecttarget=4</TD>
+   <TD>autoconnecttarget=7</TD>
    <TD>closeproject=2</TD>
-   <TD>launchprogramfpga=6</TD>
+   <TD>launchprogramfpga=11</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=2</TD>
-   <TD>openhardwaremanager=10</TD>
-   <TD>openproject=9</TD>
-   <TD>openrecenttarget=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=2</TD>
+   <TD>openhardwaremanager=18</TD>
+   <TD>openproject=10</TD>
+   <TD>openrecenttarget=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdevice=6</TD>
    <TD>projectsettingscmdhandler=1</TD>
-   <TD>runbitgen=8</TD>
+   <TD>runbitgen=17</TD>
    <TD>runsynthesis=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>savefileproxyhandler=2</TD>
    <TD>settopnode=1</TD>
@@ -51,7 +51,7 @@
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=16</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=17</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -91,47 +91,49 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=130</TD>
+    <TD>carry4=138</TD>
     <TD>dsp48e1=1</TD>
     <TD>fdce=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdre=162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=168</TD>
     <TD>fdse=26</TD>
-    <TD>gnd=11</TD>
+    <TD>gnd=12</TD>
     <TD>ibuf=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce=5</TD>
-    <TD>lut1=129</TD>
-    <TD>lut2=144</TD>
-    <TD>lut3=222</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=157</TD>
-    <TD>lut5=186</TD>
-    <TD>lut6=350</TD>
-    <TD>obuf=18</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuft=17</TD>
-    <TD>vcc=11</TD>
+    <TD>lut1=154</TD>
+    <TD>lut2=117</TD>
+    <TD>lut3=224</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=183</TD>
+    <TD>lut5=204</TD>
+    <TD>lut6=334</TD>
+    <TD>muxf7=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=18</TD>
+    <TD>obuft=17</TD>
+    <TD>vcc=12</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=130</TD>
+    <TD>carry4=138</TD>
     <TD>dsp48e1=1</TD>
     <TD>fdce=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdre=162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=168</TD>
     <TD>fdse=26</TD>
-    <TD>gnd=11</TD>
+    <TD>gnd=12</TD>
     <TD>ibuf=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>iobuf=2</TD>
     <TD>ldce=5</TD>
-    <TD>lut1=129</TD>
-    <TD>lut2=144</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=222</TD>
-    <TD>lut4=157</TD>
-    <TD>lut5=186</TD>
-    <TD>lut6=350</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=18</TD>
+    <TD>lut1=154</TD>
+    <TD>lut2=117</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=224</TD>
+    <TD>lut4=183</TD>
+    <TD>lut5=204</TD>
+    <TD>lut6=334</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7=1</TD>
+    <TD>obuf=18</TD>
     <TD>obuft=15</TD>
-    <TD>vcc=11</TD>
+    <TD>vcc=12</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -215,7 +217,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.002362</TD>
+    <TD>clocks=0.002041</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -224,21 +226,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.097158</TD>
+    <TD>devstatic=0.097185</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a100tcsg324-1</TD>
-    <TD>dsp=0.000001</TD>
+    <TD>dsp=0.000032</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.030210</TD>
+    <TD>dynamic=0.038862</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=4.6</TD>
     <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>flow_state=routed</TD>
     <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.018610</TD>
+    <TD>i/o=0.017097</TD>
     <TD>input_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>junction_temp=25.6 (C)</TD>
-    <TD>logic=0.005160</TD>
+    <TD>logic=0.010782</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
@@ -249,12 +251,12 @@
     <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.127368</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.136047</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=csg324</TD>
-    <TD>pct_clock_constrained=1.000000</TD>
+    <TD>pct_clock_constrained=0.000000</TD>
     <TD>pct_inputs_defined=16</TD>
     <TD>platform=nt64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
@@ -263,7 +265,7 @@
     <TD>read_saif=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.004077</TD>
+    <TD>signals=0.008910</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -280,21 +282,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_static_current=0.020000</TD>
     <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000679</TD>
+    <TD>vccaux_dynamic_current=0.000624</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_dynamic_current=0.000000</TD>
     <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.018145</TD>
-    <TD>vccaux_total_current=0.018825</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.018147</TD>
+    <TD>vccaux_total_current=0.018771</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000246</TD>
     <TD>vccbram_total_current=0.000246</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.011677</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.015050</TD>
-    <TD>vccint_total_current=0.026727</TD>
+    <TD>vccint_dynamic_current=0.021841</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.015073</TD>
+    <TD>vccint_total_current=0.036914</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.000000</TD>
@@ -316,9 +318,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_static_current=0.000000</TD>
     <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.005246</TD>
+    <TD>vcco33_dynamic_current=0.004818</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco33_static_current=0.004000</TD>
-    <TD>vcco33_total_current=0.009246</TD>
+    <TD>vcco33_total_current=0.008818</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2016.4</TD>
 </TR>   </TABLE>
@@ -434,13 +436,13 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=130</TD>
+    <TD>carry4_used=138</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp48e1_functional_category=Block Arithmetic</TD>
     <TD>dsp48e1_used=1</TD>
     <TD>fdce_functional_category=Flop &amp; Latch</TD>
     <TD>fdce_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=162</TD>
+    <TD>fdre_used=168</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=26</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
@@ -448,20 +450,22 @@
     <TD>ldce_functional_category=Flop &amp; Latch</TD>
     <TD>ldce_used=5</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=76</TD>
+    <TD>lut1_used=74</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=144</TD>
+    <TD>lut2_used=117</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=222</TD>
+    <TD>lut3_used=224</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=157</TD>
+    <TD>lut4_used=183</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=186</TD>
+    <TD>lut5_used=204</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=350</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>lut6_used=334</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7_functional_category=MuxFx</TD>
+    <TD>muxf7_used=1</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=18</TD>
-    <TD>obuft_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuft_functional_category=IO</TD>
     <TD>obuft_used=17</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -470,15 +474,15 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>f7_muxes_available=31700</TD>
     <TD>f7_muxes_fixed=0</TD>
-    <TD>f7_muxes_used=0</TD>
-    <TD>f7_muxes_util_percentage=0.00</TD>
+    <TD>f7_muxes_used=1</TD>
+    <TD>f7_muxes_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>f8_muxes_available=15850</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=939</TD>
+    <TD>lut_as_logic_used=941</TD>
     <TD>lut_as_logic_util_percentage=1.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -486,27 +490,27 @@
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=126800</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=192</TD>
-    <TD>register_as_flip_flop_util_percentage=0.15</TD>
+    <TD>register_as_flip_flop_used=198</TD>
+    <TD>register_as_flip_flop_util_percentage=0.16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=5</TD>
     <TD>register_as_latch_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=939</TD>
+    <TD>slice_luts_used=941</TD>
     <TD>slice_luts_util_percentage=1.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=197</TD>
+    <TD>slice_registers_used=203</TD>
     <TD>slice_registers_util_percentage=0.16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.16</TD>
-    <TD>fully_used_lut_ff_pairs_used=16</TD>
+    <TD>fully_used_lut_ff_pairs_used=14</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=939</TD>
+    <TD>lut_as_logic_used=941</TD>
     <TD>lut_as_logic_util_percentage=1.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -515,28 +519,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=119</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=119</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=115</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=129</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=129</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=123</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=136</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.21</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=146</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.23</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=301</TD>
-    <TD>slice_util_percentage=1.90</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=299</TD>
+    <TD>slice_util_percentage=1.89</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=184</TD>
+    <TD>slicel_used=179</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=117</TD>
+    <TD>slicem_used=120</TD>
     <TD>unique_control_sets_used=16</TD>
     <TD>using_o5_and_o6_fixed=16</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=196</TD>
-    <TD>using_o5_output_only_fixed=196</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=195</TD>
+    <TD>using_o5_output_only_fixed=195</TD>
     <TD>using_o5_output_only_used=1</TD>
     <TD>using_o6_output_only_fixed=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=742</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=745</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -586,7 +590,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=682351</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=700678</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -596,15 +600,15 @@
     <TD>ctrls=16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=1</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=879750</TD>
-    <TD>ff=197</TD>
+    <TD>estimated_expansions=918204</TD>
+    <TD>ff=203</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=1</TD>
     <TD>high_fanout_nets=0</TD>
     <TD>iob=39</TD>
-    <TD>lut=999</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1527</TD>
-    <TD>nets=1887</TD>
-    <TD>pins=9688</TD>
+    <TD>lut=997</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1545</TD>
+    <TD>nets=1929</TD>
+    <TD>pins=9917</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -656,10 +660,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:21s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:20s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=498.711MB</TD>
-    <TD>memory_peak=708.324MB</TD>
+    <TD>memory_gain=499.535MB</TD>
+    <TD>memory_peak=709.840MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
