--- a/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
+++ b/SSC_Bluetooth/ssc_bluetooth.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1756540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Jan 09 22:10:11 2023</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Jan 10 20:33:21 2023</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>183c791981914170bec9cf39805b6792</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>5</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>e92ec3c51a2459daaece9299c661f58d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>e92ec3c51a2459daaece9299c661f58d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>14</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>6fae7a210dde5213ba9741216b3d9178</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,38 +20,39 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2592 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 9 5900HS with Radeon Graphics        </TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3294 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=8</TD>
-   <TD>autoconnecttarget=4</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=9</TD>
+   <TD>autoconnecttarget=6</TD>
    <TD>closeproject=2</TD>
-   <TD>launchprogramfpga=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>newproject=2</TD>
-   <TD>openhardwaremanager=10</TD>
-   <TD>openproject=8</TD>
-   <TD>openrecenttarget=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=2</TD>
+   <TD>editundo=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=13</TD>
+   <TD>newproject=2</TD>
+   <TD>openhardwaremanager=19</TD>
+   <TD>openproject=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=6</TD>
+   <TD>programdevice=7</TD>
    <TD>projectsettingscmdhandler=1</TD>
-   <TD>runbitgen=10</TD>
-   <TD>runsynthesis=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>savefileproxyhandler=2</TD>
+   <TD>runbitgen=27</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
+   <TD>savefileproxyhandler=2</TD>
    <TD>settopnode=1</TD>
-   <TD>showview=2</TD>
-   <TD>simulationrun=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toggleviewnavigator=2</TD>
+   <TD>showview=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrun=6</TD>
+   <TD>toggleviewnavigator=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=16</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=19</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -91,22 +92,23 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=140</TD>
+    <TD>carry4=148</TD>
     <TD>dsp48e1=1</TD>
     <TD>fdce=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdre=212</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=218</TD>
     <TD>fdse=26</TD>
     <TD>gnd=13</TD>
     <TD>ibuf=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce=5</TD>
-    <TD>lut1=162</TD>
-    <TD>lut2=148</TD>
-    <TD>lut3=222</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=161</TD>
-    <TD>lut5=186</TD>
-    <TD>lut6=357</TD>
-    <TD>obuf=18</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuft=17</TD>
+    <TD>lut1=188</TD>
+    <TD>lut2=145</TD>
+    <TD>lut3=219</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=175</TD>
+    <TD>lut5=193</TD>
+    <TD>lut6=337</TD>
+    <TD>muxf7=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=18</TD>
+    <TD>obuft=17</TD>
     <TD>vcc=13</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -114,22 +116,23 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=140</TD>
+    <TD>carry4=148</TD>
     <TD>dsp48e1=1</TD>
     <TD>fdce=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdre=212</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=218</TD>
     <TD>fdse=26</TD>
     <TD>gnd=13</TD>
     <TD>ibuf=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>iobuf=2</TD>
     <TD>ldce=5</TD>
-    <TD>lut1=162</TD>
-    <TD>lut2=148</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=222</TD>
-    <TD>lut4=161</TD>
-    <TD>lut5=186</TD>
-    <TD>lut6=357</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=18</TD>
+    <TD>lut1=188</TD>
+    <TD>lut2=145</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=219</TD>
+    <TD>lut4=175</TD>
+    <TD>lut5=193</TD>
+    <TD>lut6=337</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7=1</TD>
+    <TD>obuf=18</TD>
     <TD>obuft=15</TD>
     <TD>vcc=13</TD>
 </TR>   </TABLE>
@@ -216,7 +219,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.002371</TD>
+    <TD>clocks=0.002372</TD>
     <TD>confidence_level_clock_activity=Medium</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -225,21 +228,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.097158</TD>
+    <TD>devstatic=0.097200</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a100tcsg324-1</TD>
-    <TD>dsp=0.000001</TD>
+    <TD>dsp=0.000032</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.030301</TD>
+    <TD>dynamic=0.043846</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=4.6</TD>
     <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>flow_state=routed</TD>
     <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.018607</TD>
+    <TD>i/o=0.019672</TD>
     <TD>input_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>junction_temp=25.6 (C)</TD>
-    <TD>logic=0.005153</TD>
+    <TD>logic=0.012067</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
@@ -250,7 +253,7 @@
     <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.127459</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.141046</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -264,7 +267,7 @@
     <TD>read_saif=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.004170</TD>
+    <TD>signals=0.009703</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -281,21 +284,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_static_current=0.020000</TD>
     <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000679</TD>
+    <TD>vccaux_dynamic_current=0.000718</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_dynamic_current=0.000000</TD>
     <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.018145</TD>
-    <TD>vccaux_total_current=0.018824</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.018148</TD>
+    <TD>vccaux_total_current=0.018866</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000246</TD>
-    <TD>vccbram_total_current=0.000246</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000247</TD>
+    <TD>vccbram_total_current=0.000247</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.011771</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.015050</TD>
-    <TD>vccint_total_current=0.026821</TD>
+    <TD>vccint_dynamic_current=0.024250</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.015087</TD>
+    <TD>vccint_total_current=0.039337</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.000000</TD>
@@ -317,9 +320,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_static_current=0.000000</TD>
     <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.005245</TD>
+    <TD>vcco33_dynamic_current=0.005546</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco33_static_current=0.004000</TD>
-    <TD>vcco33_total_current=0.009245</TD>
+    <TD>vcco33_total_current=0.009546</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2016.4</TD>
 </TR>   </TABLE>
@@ -435,13 +438,13 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=140</TD>
+    <TD>carry4_used=148</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp48e1_functional_category=Block Arithmetic</TD>
     <TD>dsp48e1_used=1</TD>
     <TD>fdce_functional_category=Flop &amp; Latch</TD>
     <TD>fdce_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=212</TD>
+    <TD>fdre_used=218</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=26</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
@@ -451,18 +454,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=78</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=148</TD>
+    <TD>lut2_used=145</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=222</TD>
+    <TD>lut3_used=219</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=161</TD>
+    <TD>lut4_used=175</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=186</TD>
+    <TD>lut5_used=193</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=357</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>lut6_used=337</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7_functional_category=MuxFx</TD>
+    <TD>muxf7_used=1</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=18</TD>
-    <TD>obuft_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuft_functional_category=IO</TD>
     <TD>obuft_used=17</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -471,15 +476,15 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>f7_muxes_available=31700</TD>
     <TD>f7_muxes_fixed=0</TD>
-    <TD>f7_muxes_used=0</TD>
-    <TD>f7_muxes_util_percentage=0.00</TD>
+    <TD>f7_muxes_used=1</TD>
+    <TD>f7_muxes_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>f8_muxes_available=15850</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=958</TD>
+    <TD>lut_as_logic_used=957</TD>
     <TD>lut_as_logic_util_percentage=1.51</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -487,27 +492,27 @@
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=126800</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=242</TD>
-    <TD>register_as_flip_flop_util_percentage=0.19</TD>
+    <TD>register_as_flip_flop_used=248</TD>
+    <TD>register_as_flip_flop_util_percentage=0.20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=5</TD>
     <TD>register_as_latch_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=958</TD>
+    <TD>slice_luts_used=957</TD>
     <TD>slice_luts_util_percentage=1.51</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=247</TD>
-    <TD>slice_registers_util_percentage=0.19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.19</TD>
+    <TD>slice_registers_used=253</TD>
+    <TD>slice_registers_util_percentage=0.20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.20</TD>
     <TD>fully_used_lut_ff_pairs_used=16</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=958</TD>
+    <TD>lut_as_logic_used=957</TD>
     <TD>lut_as_logic_util_percentage=1.51</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -516,28 +521,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=117</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=117</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=116</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=128</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=128</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=124</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=136</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.21</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=148</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.23</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=311</TD>
-    <TD>slice_util_percentage=1.96</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=335</TD>
+    <TD>slice_util_percentage=2.11</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=187</TD>
+    <TD>slicel_used=201</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=124</TD>
+    <TD>slicem_used=134</TD>
     <TD>unique_control_sets_used=18</TD>
     <TD>using_o5_and_o6_fixed=18</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=194</TD>
-    <TD>using_o5_output_only_fixed=194</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=190</TD>
+    <TD>using_o5_output_only_fixed=190</TD>
     <TD>using_o5_output_only_used=1</TD>
     <TD>using_o6_output_only_fixed=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=763</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=766</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -587,7 +592,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=718826</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=696608</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -597,15 +602,15 @@
     <TD>ctrls=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=1</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=933504</TD>
-    <TD>ff=247</TD>
+    <TD>estimated_expansions=926976</TD>
+    <TD>ff=253</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=1</TD>
     <TD>high_fanout_nets=0</TD>
     <TD>iob=39</TD>
-    <TD>lut=1016</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1608</TD>
-    <TD>nets=1998</TD>
-    <TD>pins=10207</TD>
+    <TD>lut=1011</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1618</TD>
+    <TD>nets=2032</TD>
+    <TD>pins=10336</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -657,10 +662,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:46s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:20s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=509.445MB</TD>
-    <TD>memory_peak=738.941MB</TD>
+    <TD>memory_gain=497.180MB</TD>
+    <TD>memory_peak=706.945MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
